Update users service with go-kit
Signed-off-by: Burak Sekili <buraksekili@gmail.com>

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,36 +3,44 @@ version: "3.4"
 
 services:
 
-  # Container for MongoDB-express which will be UI for the DB.
-  mongo-express:
-    image: mongo-express
-    restart: always
+  mongo:
+    image: mongo
+    container_name: mongo
     ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      - 27017:27017
     networks:
       - servicenet
 
-  # RabbitMQ container
-  rabbitmq:
-    image: rabbitmq:3-management
-    hostname: rabbitmq
-    container_name: rabbitmq
-    ports:
-      - 5672:5672
-      - 15672:15672
-    networks:
-      - servicenet
+#  # Container for MongoDB-express which will be UI for the DB.
+#  mongo-express:
+#    image: mongo-express
+#    restart: always
+#    ports:
+#      - 8081:8081
+#    environment:
+#      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+#      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+#    networks:
+#      - servicenet
 
+#  # RabbitMQ container
+#  rabbitmq:
+#    image: rabbitmq:3-management
+#    hostname: rabbitmq
+#    container_name: rabbitmq
+#    ports:
+#      - 5672:5672
+#      - 15672:15672
+#    networks:
+#      - servicenet
+#
   # UserService container
-  userservice:
-    image: store/userservice
+  users:
+    image: store/users
     ports:
       - 8282:8282
     depends_on:
-      - rabbitmq
+#      - rabbitmq
       - mongo
     restart: on-failure
     networks:
@@ -42,10 +50,10 @@ services:
       - DBHost=mongo
 
   # ProductService container
-  productservice:
-    image: store/productservice
+  products:
+    image: store/products
     depends_on:
-      - rabbitmq
+#      - rabbitmq
       - mongo
     ports:
     - 8181:8181
@@ -55,55 +63,47 @@ services:
       - DBHost=mongo
 
   # EmailService Container
-  emailservice:
-    image: store/emailservice
-    restart: on-failure
-    depends_on:
-      - rabbitmq
-    env_file:
-      - .env
-    environment:
-      - AMQP_URL=amqp://guest:guest@rabbitmq:5672/
-      - CONTAINER_EMAIL=docker
-    networks:
-      - servicenet
+#  emailservice:
+#    image: store/emailservice
+#    restart: on-failure
+#    depends_on:
+#      - rabbitmq
+#    env_file:
+#      - .env
+#    environment:
+#      - AMQP_URL=amqp://guest:guest@rabbitmq:5672/
+#      - CONTAINER_EMAIL=docker
+#    networks:
+#      - servicenet
 
-  # Grafana container to visualize prometheus metrics
-  grafana:
-    image: grafana/grafana:latest
-    ports:
-      - 3000:3000
-    depends_on:
-      - prometheus
-    networks:
-      - monitoring
-
-  # Prometheus container
-  prometheus:
-    image: prom/prometheus:latest
-    volumes:
-      - ../metrics:/etc/prometheus/
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yaml'
-      - '--storage.tsdb.path=/prometheus'
-    ports:
-      - 9090:9090
-    restart: on-failure
-    depends_on:
-      - userservice
-      - productservice
-      - emailservice
-    networks:
-      - monitoring
-      - servicenet
-
-  mongo:
-    image: mongo
-    container_name: mongo
-    ports:
-      - 27017:27017
-    networks:
-      - servicenet
+#  # Grafana container to visualize prometheus metrics
+#  grafana:
+#    image: grafana/grafana:latest
+#    ports:
+#      - 3000:3000
+#    depends_on:
+#      - prometheus
+#    networks:
+#      - monitoring
+#
+#  # Prometheus container
+#  prometheus:
+#    image: prom/prometheus:latest
+#    volumes:
+#      - ../metrics:/etc/prometheus/
+#    command:
+#      - '--config.file=/etc/prometheus/prometheus.yaml'
+#      - '--storage.tsdb.path=/prometheus'
+#    ports:
+#      - 9090:9090
+#    restart: on-failure
+#    depends_on:
+#      - users
+#      - products
+#      - emailservice
+#    networks:
+#      - monitoring
+#      - servicenet
 
 networks:
   servicenet:
