Add new env variables
Signed-off-by: Burak Sekili <buraksekili@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -1,7 +1,26 @@
-from=<YOUR EMAIL>
-to=<RECEIVER'S EMAIL>
-password=<YOUR EMAIL'S PASSWORD>
-smtpHost=<SMTP HOST ADDRESS>
-smtpPort=<SMTP PORT NUMBER>
-subject=<YOUR SUBJECT>
-message=<YOUR MESSAGE>
+##              ====== ENVIRONMENT VARIABLES FOR SERVICES ======
+##  All environment variables for each service. These values are used as default values.
+##  You can modify these default values based on your system configuration.
+
+## SMTP for Email
+S_SMTP_FROM=<YOUR_EMAIL_ADDRESS>
+S_SMTP_PASSWORD=<YOUR_EMAIL_PASSWORD>
+S_SMTP_HOST=<YOUR_EMAIL_SERVICE_HOST>
+S_SMTP_PORT=<YOUR_EMAIL_SERVICE_PORT>
+
+## AMQP messaging
+S_AMQP_ADDRESS=amqp://guest:guest@rabbitmq:5672
+S_AMQP_EXCHANGE_NAME=tests
+S_AMQP_QUEUE_NAME=listener_queue
+
+## MongoDB
+S_MONGODB_DB=store
+S_MONGODB_HOST=mongo
+S_MONGODB_PORT=27017
+
+## Product service
+S_PRODUCTS_PORT=8181
+
+## Users service
+S_USERS_PORT=8282
+
